--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <title>Calculator</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -7,6 +8,7 @@
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
 </head>
+
 <body>
   <div class="container">
     <h1>Calculator</h1>
@@ -19,22 +21,49 @@
         <label for="add2">2nd number:</label>
         <input id="add2" class="form-control" type="text">
       </div>
-      <!-- <form id="subtract">
-        <div class="form-group">
-          <label for="subtract1">1st number:</label>
-          <input id="subtract1" class="form-control" type="text">
-        </div>
-      <form id="subtract2">
-        <div class="form-group">
-          <label for="subtract2">2nd number:</label>
-          <input id="subtract2" class="form-control" type="text">
-        </div> -->
-      <button type="submit" class="btn">Add!</button>
-      <button type="submit" class="btn btn-success">Subtract!</button>
+
+      <button id="addition" class="btn btn-danger">Addition</button>
+      <button id="subtraction" class="btn btn-warning">Subtraction</button>
+      <button id="multiply" class="btn btn-success">Multiply</button>
+      <button id="divide" class="btn btn-primary">Divide</button>
+
+
     </form>
+
     <div id="output">
 
     </div>
   </div>
+
 </body>
+
+</html> -->
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+  <title>Calculator</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Calculator</h1>
+    <form id="add">
+      <div class="form-group">
+        <label for="add1">1st number:</label>
+        <input id="add1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="add2">2nd number:</label>
+        <input id="add2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Add!</button>
+    </form>
+  </div>
+</body>
+
 </html>
