--- a/index.html
+++ b/index.html
@@ -1,43 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-  <title>Calculator</title>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.6.0.js"></script>
-  <script src="js/scripts.js"></script>
-</head>
-
-<body>
-  <div class="container">
-    <h1>Calculator</h1>
-    <form id="add">
-      <div class="form-group">
-        <label for="add1">1st number:</label>
-        <input id="add1" class="form-control" type="text">
-      </div>
-      <div class="form-group">
-        <label for="add2">2nd number:</label>
-        <input id="add2" class="form-control" type="text">
-      </div>
-
-      <button id="addition" class="btn btn-danger">Addition</button>
-      <button id="subtraction" class="btn btn-warning">Subtraction</button>
-      <button id="multiply" class="btn btn-success">Multiply</button>
-      <button id="divide" class="btn btn-primary">Divide</button>
-
-
-    </form>
-
-    <div id="output">
-
-    </div>
-  </div>
-
-</body>
-
-</html> -->
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -61,9 +21,16 @@
         <label for="add2">2nd number:</label>
         <input id="add2" class="form-control" type="text">
       </div>
-      <button type="submit" class="btn">Add!</button>
+
+      <button id="plus" type="submit" class="btn btn-danger">Addition</button>
+      <button id="minus" type="submit" class="btn btn-warning">Subtraction</button>
+      <button id="multiply" type="submit" class="btn btn-success">Multiply</button>
+      <button id="divide" type="submit" class="btn btn-primary">Divide</button>
     </form>
+    <div id="output">
+    </div>
   </div>
+
 </body>
 
 </html>
